fix: 解决 JDK 升级后使用 com.sun 包中的代码报错问题